# Device-Fleet-Manager-Daemon

docs/: readme.md
src/Cxx/: CMakeLists.txt  Device.cpp  Device.h  DeviceFleetManagerImpl.cpp  DeviceFleetManagerImpl.h  DeviceManager.cpp  DeviceManager.h  HttpGateway.cpp  HttpGateway.h  buildapp.sh  main.cpp  readme.txt
src/proto/: DeviceFleetManager.proto  Makefile  install_grpc.sh  readme.txt
src/pycli/: dfm.py  readme.txt  requirements.txt
src/systemd/: DevFleetManServ.service  readme.txt
